--- a/page7.html
+++ b/page7.html
@@ -11,7 +11,7 @@
   <a href="./index.html"><button class="back-btn">رجوع</button></a>
 
  <div class="boxs">
-  <div class="cardcenter">
+  <div class="card1">
     <img src="./pic/adpt.jpg"  />
       <h1>للتبني</h1>
       <h3> النوع: ذكر برتش شورت هير</h3>
@@ -24,7 +24,7 @@
       </ul>
  </div>
         <div class="boxs2">
-          <div class="cardcenter2">
+          <div class="card2">
             <img src="./pic/adpt3.jpg"  />
               <h1>للتبني</h1>
               <h3>النوع: نثية هملايا</h3>
@@ -37,7 +37,7 @@
               </ul> 
         </div>
         <div class="boxs3">
-          <div class="cardcenter3">
+          <div class="card3">
             <img src="./pic/adpt2.jpg"  />
               <h1>للتبني</h1>
               <h3> النوع: ذكر كيتن سكوتش</h3>
